Added platforms for Bitfinex support

--- a/application.json
+++ b/application.json
@@ -44,6 +44,10 @@
     {
       "id": "Stats",
       "isDefault": false
+    },
+    {
+      "id": "Platforms",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
