--- a/application.json
+++ b/application.json
@@ -68,6 +68,10 @@
     {
       "id": "Owners",
       "isDefault": false
+    },
+    {
+      "id": "Asset Swap",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
