Revert "commit z produkcji do wywalenia"
This reverts commit f3ee2d53fe9e340bfc298bb13dc9983a56e47c67.

--- a/application.json
+++ b/application.json
@@ -10,7 +10,7 @@
     "navigationSetting": {
       "colorStyle": "theme",
       "logoAssetId": "",
-      "logoConfiguration": "logoOnly",
+      "logoConfiguration": "logoAndApplicationTitle",
       "navStyle": "inline",
       "orientation": "top",
       "position": "static",
@@ -84,7 +84,7 @@
     "navigationSetting": {
       "colorStyle": "theme",
       "logoAssetId": "",
-      "logoConfiguration": "logoOnly",
+      "logoConfiguration": "logoAndApplicationTitle",
       "navStyle": "inline",
       "orientation": "top",
       "position": "static",
